# meico-wasm

./: .gitignore  CMakeLists.txt  TestJavaImplementation.java  build.xml  comparison_test.sh  debug_dynamics.cpp  debug_rubato  debug_rubato.cpp  find_rubato_params  find_rubato_params.cpp  test_bach_comprehensive  test_bach_comprehensive.cpp  test_bach_msm  test_bach_msm.cpp  test_bach_real_data  test_bach_real_data.cpp  test_complete_validation  test_complete_validation.cpp  test_real_files  test_real_files.cpp
include/common/: common.h
include/mpm/: Mpm.h
include/mpm/elements/: Dated.h  Global.h  Part.h  Performance.h
include/mpm/elements/maps/: ArticulationMap.h  AsynchronyMap.h  DynamicsMap.h  GenericMap.h  ImprecisionMap.h  MetricalAccentuationMap.h  MovementMap.h  OrnamentationMap.h  RubatoMap.h  TempoMap.h
include/mpm/elements/maps/data/: ArticulationData.h  DistributionData.h  DynamicsData.h  MetricalAccentuationData.h  MovementData.h  OrnamentData.h  RubatoData.h  TempoData.h
include/mpm/elements/metadata/: Metadata.h
include/msm/: AbstractMsm.h  Msm.h
include/supplementary/: KeyValue.h  RandomNumberProvider.h
include/xml/: AbstractXmlSubtree.h  Helper.h  XmlBase.h
src/meico/mei/: Mei.java
src/meico/midi/: EventMaker.java  Midi.java  Midi2MsmConverter.java
src/meico/mpm/: Mpm.java
src/meico/mpm/elements/: Dated.java  Global.java  Header.java  Part.java  Performance.java
src/meico/mpm/elements/maps/: ArticulationMap.java  AsynchronyMap.java  DynamicsMap.java  GenericMap.java  ImprecisionMap.java  MetricalAccentuationMap.java  MovementMap.java  OrnamentationMap.java  RubatoMap.java  TempoMap.java
src/meico/mpm/elements/maps/data/: ArticulationData.java  MovementData.java
src/meico/mpm/elements/metadata/: Author.java  Comment.java  Metadata.java  RelatedResource.java
src/meico/mpm/elements/styles/: ArticulationStyle.java  DynamicsStyle.java  GenericStyle.java  MetricalAccentuationStyle.java  OrnamentationStyle.java  RubatoStyle.java  TempoStyle.java
src/meico/mpm/elements/styles/defs/: AbstractDef.java  AccentuationPatternDef.java  ArticulationDef.java  DynamicsDef.java  OrnamentDef.java  RubatoDef.java  TempoDef.java
src/meico/msm/: Msm.java
src/meico/supplementary/: RandomNumberProvider.java
src/meico/xml/: Helper.java  XmlBase.java
src/mpm/: Mpm.cpp
src/mpm/elements/: Dated.cpp  Global.cpp  Part.cpp  Performance.cpp
src/mpm/elements/maps/: ArticulationMap.cpp  AsynchronyMap.cpp  DynamicsMap.cpp  GenericMap.cpp  ImprecisionMap.cpp  MetricalAccentuationMap.cpp  MovementMap.cpp  OrnamentationMap.cpp  RubatoMap.cpp  TempoMap.cpp
src/mpm/elements/maps/data/: ArticulationData.cpp  DistributionData.cpp  DynamicsData.cpp  MetricalAccentuationData.cpp  MovementData.cpp  OrnamentData.cpp  RubatoData.cpp  TempoData.cpp
src/msm/: AbstractMsm.cpp  Msm.cpp
src/supplementary/: KeyValue.cpp  RandomNumberProvider.cpp
src/xml/: AbstractXmlSubtree.cpp  Helper.cpp  XmlBase.cpp
test/: bwv1007_cpp_result.msm  bwv1007_java_result.msm  main.cpp
test/meico/mpm/: ArticulationMapTest.java  DynamicsMapTest.java  MetricalAccentuationMapTest.java  MpmIntegrationTest.java  MpmTestRunner.java  MpmTestUtils.java  OrnamentationMapTest.java  README.md  TempoMapTest.java
test/mpm/: MpmTestUtils.cpp  MpmTestUtils.h
